[package]
name = "rvu"
version = "0.1.0"
edition = "2021"
description = "A native image viewer with support for Linux, MacOS and Windows."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.14", features = ["derive"] }
image = "0.24.6"
pixels = "0.12.0"
thiserror = "1.0.40"
winit = "0.28.3"
